--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--shrink-to-fit: git the viewport in iOS9-->
     <meta name="theme-color" content="#000000">
+    <!--设置状态栏的颜色，可使Android版Chrome在访问状态栏时自动变色-->
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -22,19 +24,14 @@
     <title>React App</title>
   </head>
   <body>
+  <script>
+      !(function(c,b,d,a){c[a]||(c[a]={});c[a].config={pid:"ikohd5xq54@730243083a91ad8",imgUrl:"https://arms-retcode.aliyuncs.com/r.png?"};
+          with(b)with(body)with(insertBefore(createElement("script"),firstChild))setAttribute("crossorigin","",src=d)
+      })(window,document,"https://retcode.alicdn.com/retcode/bl.js","__bl");
+  </script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
